--- a/.hintrc
+++ b/.hintrc
@@ -10,6 +10,13 @@
       {
         "label": "off"
       }
-    ]
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
+    ],
+    "typescript-config/is-valid": "off"
   }
 }
