--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,7 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start",
-    "static": "next build"
+    "start": "npx serve out"
   },
   "dependencies": {
     "@capacitor/android": "^7.4.3",
