--- a/backend/package.json
+++ b/backend/package.json
@@ -18,17 +18,21 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
-    "@types/node": "^24.3.0",
+    "@types/node": "^24.3.1",
     "concurrently": "^9.2.1",
     "cross-env": "^10.0.0",
     "drizzle-kit": "^0.31.4",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@langchain/community": "^0.3.55",
+    "@langchain/core": "^0.3.75",
+    "@langchain/google-genai": "^0.2.17",
     "@neondatabase/serverless": "^1.0.1",
     "axios": "^1.11.0",
     "axios-retry": "^4.5.0",
@@ -39,6 +43,7 @@
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.33",
     "multer": "^2.0.2"
   }
 }
