--- a/backend/package.json
+++ b/backend/package.json
@@ -34,9 +34,12 @@
     "@langchain/core": "^0.3.75",
     "@langchain/google-genai": "^0.2.17",
     "@neondatabase/serverless": "^1.0.1",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.11.0",
     "axios-retry": "^4.5.0",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.0",
+    "chartjs-node-canvas": "^5.0.0",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
