--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.1",
+    "@types/nodemailer": "^7.0.1",
     "concurrently": "^9.2.1",
     "cross-env": "^10.0.0",
     "drizzle-kit": "^0.31.4",
@@ -47,6 +48,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.33",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.6"
   }
 }
