--- a/backend/package.json
+++ b/backend/package.json
@@ -32,8 +32,10 @@
   },
   "dependencies": {
     "@langchain/community": "^0.3.55",
-    "@langchain/core": "^0.3.75",
+    "@langchain/core": "^0.3.77",
     "@langchain/google-genai": "^0.2.17",
+    "@langchain/groq": "^0.2.4",
+    "@langchain/langgraph": "^0.4.9",
     "@neondatabase/serverless": "^1.0.1",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.11.0",
