--- a/backend/package.json
+++ b/backend/package.json
@@ -51,6 +51,7 @@
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.33",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.6"
+    "nodemailer": "^7.0.6",
+    "socket.io": "^4.8.1"
   }
 }
