--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "geist": "^1.3.1",
     "i18next": "^25.5.2",
     "input-otp": "1.4.1",
+    "intro.js": "^8.3.2",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-i18next": "^15.4.2",
@@ -70,11 +71,13 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "webgl-fluid": "^0.3.9",
     "zod": "3.25.67"
   },
   "devDependencies": {
     "@capacitor/cli": "^7.4.3",
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/intro.js": "^5.1.5",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
