--- a/backend/speech/requirements.txt
+++ b/backend/speech/requirements.txt
@@ -1,9 +1,9 @@
-fastapi
-uvicorn[standard]
-numpy
-librosa
-soundfile
 pydub
 imageio-ffmpeg
-tensorflow-cpu==2.15.0
 python-multipart
+soundfile
+librosa
+numpy
+fastapi
+uvicorn[standard]
+tensorflow==2.15.0
