--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "@langchain/langgraph": "^0.4.9",
     "@neondatabase/serverless": "^1.0.1",
     "@xenova/transformers": "^2.17.2",
+    "assemblyai": "^4.16.1",
     "axios": "^1.11.0",
     "axios-retry": "^4.5.0",
     "bcryptjs": "^3.0.2",
