--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,7 @@
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
     "react-hook-form": "^7.60.0",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.7.3",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
