--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "@langchain/groq": "^0.2.4",
     "@langchain/langgraph": "^0.4.9",
     "@neondatabase/serverless": "^1.0.1",
+    "@sendgrid/mail": "^8.1.6",
     "@xenova/transformers": "^2.17.2",
     "assemblyai": "^4.16.1",
     "axios": "^1.11.0",
